--- a/index.html
+++ b/index.html
@@ -4,6 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GITHUB</title>
+    <style>
+        body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        margin: 0;
+        padding: 0;
+       text-align: center;
+      }
+      h1 {
+        color: #333;
+        font-size: 2.5em;
+      }
+      h2 {
+        color: #555;
+        font-size: 1.8em;
+      }
+      p {
+        color: #666;
+        font-size: 1.2em;
+        line-height: 1.6;
+      }
+      ul {
+        list-style-type: none;
+        padding: 0;
+      }
+      ul li {
+        margin-bottom: 15px;
+        text-align: left;
+        background-color: #dacccc;
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+      h3 {
+        color: #777;
+      }
+      a {
+        color: #007bff;
+        text-decoration: none;
+        transition: color 0.3s ease;
+      }
+      a:hover {
+        color: #0056b3;
+      }
+      .container{
+        padding: 80px;
+      }
+    </style>
   </head>
   <body>
     <h1>GITHUB</h1>
